# VIKO_STRUCTURED_PROGRAMMING_TASKS

./: CMakeLists.txt
Linked_List_Test/: Linked_List.h  User.h  main.cpp
Linked_Lists/: Node.h  test.cpp
T2BCK/Latest Backup/: Console.cpp  Console.h  Log_User_Action.cpp  Log_User_Action.h  README.MD  Read_User_Input.cpp  Read_User_Input.h  Server_Service.cpp  Server_Service.h  Service_Usage_List.h  TASK_2.cpp  User.cpp  User.h  User_List.cpp  User_List.h
T2BCK/Old Backup/: Log_User_Action.h  Read_User_Input.h  Server_Service.h  TASK_2.cpp  User.h
TASK_1/: README.md  TASK_1.cpp
TASK_2/: Console.cpp  Console.h  Data_Manager.cpp  Data_Manager.h  Interface.cpp  Interface.h  Logging.cpp  Logging.h  README.MD  Service_Manager.cpp  Service_Manager.h  TASK_2.cpp  Test_Unit.cpp  Test_Unit.h  User.cpp  User.h  User_List.cpp  User_List.h
TASK_3/: IndexTemplate.html  Module_Generator.h  NavigationBar_Generator.h  README.MD  ReadUser_Input.h  TASK_3.cpp  Title_Page_Generator.h
